--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <nav class="navbar navbar-expand-lg p-4">
             <div class="container-fluid d-flex flex-row justify-content-between ">
                 <a class="navbar-brand" href="#"><img src="images/logo.svg" /></a>
-                <img class="hamburger" src="images/icon-hamburger.svg" alt="hamburger" />
-                <div class="navbar" id="navbarNav">
+                <button class="toggle" id="toggle">
+                     <img id="hamburger-icon" class="hamburger" src="images/icon-hamburger.svg" alt="hamburger" />
+                </button>
+                <div class="navbarNav" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Pricing</a>
@@ -95,28 +97,41 @@
     </section>
     <section class="wrapper d-flex flex-column justify-content-center align-items-center">
         <h1 class="text-center mb-5">What they’ve said</h1>
-        <div class="review-container d-flex flex-column flex-lg-row justify-content-between align-items-center gap-4 my-5">
-            <div class="review review1 d-flex flex-column justify-content-center align-items-center gap-3 m-3 m-lg-0">
+        <div class="review-container d-flex flex-column flex-lg-row justify-content-center align-items-center justify-content-lg-flex-start  align-items-lg-flex-end gap-4 my-5">
+            <div class="review review1">
                 <img src="images/avatar-anisha.png " alt="Anisha" />
-                <h5 class="text-center mb-0 mt-4">Anisha Li</h5>
+                <h5 class="text-center mb-3">Anisha Li</h5>
                 <p class="text-center px-3">
                     “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”
                 </p>
             </div>
-            <div class="review review2 d-flex flex-column justify-content-center align-items-center gap-3 m-3 m-lg-0">
+            <div class="review review2">
                 <img src="images/avatar-ali.png " alt="Ali" />
-                <h5 class="text-center mb-0 mt-4">Ali Bravo</h5>
+                <h5 class="text-center mb-3">Ali Bravo</h5>
                 <p class="text-center px-3">
                     “We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused.”
                 </p>
             </div>
-            <div class="review review3 d-flex flex-column justify-content-center align-items-center gap-3 m-3 m-lg-0">
+            <div class="review review3">
                 <img src="images/avatar-richard.png " alt="richard" />
-                <h5 class="text-center mb-0 mt-4">Richard Watts</h5>
+                <h5 class="text-center mb-3">Richard Watts</h5>
                 <p class="text-center px-3">
                     “Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk to!”
                 </p>
             </div>
+            <div class="review review4">
+                <img src="images/avatar-shanai.png " alt="shanai" />
+                <h5 class="text-center my-3">Shanai Gough</h5>
+                <p class="text-center px-3">
+                    “Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being intrusive.”
+                </p>
+            </div>
+        </div>
+        <div class="dots">
+            <span class="dot rounded-pill" onclick="currentCard(1)"></span>
+            <span class="dot rounded-pill" onclick="currentCard(2)"></span>
+            <span class="dot rounded-pill" onclick="currentCard(3)"></span>
+            <span class="dot rounded-pill" onclick="currentCard(4)"></span>
         </div>
         <button class="btn rounded-pill border-0 mx-auto mt-4">Get Started</button>
     </section>
@@ -159,6 +174,7 @@
         <p class="text-center">Copyright 2020. All Rights Reserved</p>
     </footer>
 
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/66b58c16d1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 </body>
