--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body class="m-auto">
     <div class="intro mb-5">
-        <nav class="navbar navbar-expand-lg p-4">
+        <nav class="navbar navbar-expand-lg pt-5 pb-3">
             <div class="container-fluid d-flex flex-row justify-content-between ">
-                <a class="navbar-brand" href="#"><img src="images/logo.svg" /></a>
+                <a class="navbar-brand" href="#" aria-label="logo"><img src="images/logo.svg" alt="logo" /></a>
                 <button class="toggle" id="toggle">
                      <img id="hamburger-icon" class="hamburger" src="images/icon-hamburger.svg" alt="hamburger" />
                 </button>
@@ -39,9 +39,7 @@
                         </li>
                     </ul>
                 </div>
-                <button type="button" class="d-none d-lg-block rounded-pill border-0">
-               Get Started
-            </button>
+                <button type="button" class="d-none d-lg-block rounded-pill border-0">Get Started</button>
             </div>
         </nav>
 
@@ -52,8 +50,8 @@
                 </div>
                 <div class="intro-content-wrapper text-center text-lg-start">
                     <div class="intro-content m-auto p-3">
-                        <h1 class="mb-3">Bring everyone together to build better products.</h1>
-                        <p class="mb-4">Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
+                        <h1 class="mb-3 fs-1 fw-bold">Bring everyone together to build better products.</h1>
+                        <p class="mb-4 pe-lg-5">Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
                         <button type="button" class="btn rounded-pill border-0 mb-5">Get Started</button>
                     </div>
                 </div>
@@ -63,123 +61,122 @@
             <div class="description-content d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-start text-center ">
                 <div class="different-wrapper my-4">
                     <div class="different m-auto pe-4">
-                        <h1 class="mb-3 text-center text-lg-start">What's different about Manage?</h1>
+                        <h2 class="mb-3 text-center text-lg-start fs-1 fw-bold">What's different about Manage?</h2>
                         <p class="mb-0 text-center text-lg-start">Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams.</p>
                     </div>
                 </div>
                 <div class="benefits ">
                     <div class="benefit d-flex mb-3">
                         <span class="rounded-pill px-3 py-1 ms-4 align-self-start">01</span>
-                        <div class="d-flex flex-column justify-content-end align-items-center ">
-                            <h1 class="px-3 py-2 text-start mb-3 mb-lg-2">Track company-wide progress</h1>
-                            <p class="text-start px-lg-3">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
+                        <div class="d-flex flex-column justify-content-end align-items-center align-items-lg-start">
+                            <h2 class="px-3 py-2 text-start mb-3 mb-lg-2 fs-6 fw-bold">Track company-wide progress</h2>
+                            <p class="text-start ps-lg-3 pe-lg-5">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
                         </div>
 
                     </div>
                     <div class="benefit d-flex mb-3">
                         <span class="rounded-pill px-3 py-1 ms-4 align-self-start">02</span>
-                        <div class="d-flex flex-column justify-content-end align-items-center ">
-                            <h1 class="px-3 py-2 text-start mb-3 mb-lg-2">Advanced built-in reports</h1>
-                            <p class="text-start px-lg-3">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
+                        <div class="d-flex flex-column justify-content-end align-items-center align-items-lg-start">
+                            <h2 class="px-3 py-2 text-start mb-3 mb-lg-2 fs-6 fw-bold">Advanced built-in reports</h2>
+                            <p class="text-start ps-lg-3 pe-lg-5">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
                         </div>
 
                     </div>
                     <div class="benefit d-flex ">
                         <span class="rounded-pill px-3 py-1 ms-4 align-self-start">03</span>
-                        <div class="d-flex flex-column justify-content-end align-items-center">
-                            <h1 class="px-3 py-2 text-start mb-3 mb-lg-2">Everything you need in one place</h1>
-                            <p class="text-start px-lg-3 ">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
+                        <div class="d-flex flex-column justify-content-end align-items-center align-items-lg-start">
+                            <h2 class="px-3 py-2 text-start mb-3 mb-lg-2 fs-6 fw-bold">Everything you need in one place</h2>
+                            <p class="text-start ps-lg-3 pe-lg-5">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
                         </div>
                     </div>
                 </div>
             </div>
-    </div>
-    </section>
-    <section class="wrapper d-flex flex-column justify-content-center align-items-center">
-        <h1 class="text-center mb-5">What they’ve said</h1>
-        <div class="review-container d-flex flex-column flex-lg-row justify-content-center align-items-center gap-4 my-5">
-            <div class="review review1">
-                <img src="images/avatar-anisha.png " alt="Anisha" />
-                <h5 class="text-center mb-3">Anisha Li</h5>
-                <p class="text-center px-3">
-                    “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”
-                </p>
+        </section>
+        <section class="wrapper d-flex flex-column justify-content-center align-items-center">
+            <h1 class="text-center">What they’ve said</h1>
+            <div class="review-container d-flex flex-column flex-lg-row justify-content-center align-items-center gap-4 my-5">
+                <div class="review review1">
+                    <img src="images/avatar-anisha.png " alt="Anisha" />
+                    <h5 class="text-center mb-3">Anisha Li</h5>
+                    <p class="text-center px-3">
+                        “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”
+                    </p>
+                </div>
+                <div class="review review2">
+                    <img src="images/avatar-ali.png " alt="Ali" />
+                    <h5 class="text-center mb-3">Ali Bravo</h5>
+                    <p class="text-center px-3">
+                        “We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused.”
+                    </p>
+                </div>
+                <div class="review review3">
+                    <img src="images/avatar-richard.png " alt="richard" />
+                    <h5 class="text-center mb-3">Richard Watts</h5>
+                    <p class="text-center px-3">
+                        “Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk to!”
+                    </p>
+                </div>
+                <div class="review review4">
+                    <img src="images/avatar-shanai.png " alt="shanai" />
+                    <h5 class="text-center my-3">Shanai Gough</h5>
+                    <p class="text-center px-3">
+                        “Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being intrusive.”
+                    </p>
+                </div>
             </div>
-            <div class="review review2">
-                <img src="images/avatar-ali.png " alt="Ali" />
-                <h5 class="text-center mb-3">Ali Bravo</h5>
-                <p class="text-center px-3">
-                    “We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused.”
-                </p>
+            <div class="dots">
+                <span class="dot rounded-pill" onclick="currentCard(1)"></span>
+                <span class="dot rounded-pill" onclick="currentCard(2)"></span>
+                <span class="dot rounded-pill" onclick="currentCard(3)"></span>
+                <span class="dot rounded-pill" onclick="currentCard(4)"></span>
             </div>
-            <div class="review review3">
-                <img src="images/avatar-richard.png " alt="richard" />
-                <h5 class="text-center mb-3">Richard Watts</h5>
-                <p class="text-center px-3">
-                    “Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk to!”
-                </p>
+            <button class="btn rounded-pill border-0 mx-auto mt-4">Get Started</button>
+        </section>
+        <section class="subscribe-wrapper mt-5">
+            <div class="subscribe-content d-flex flex-column flex-lg-row justify-content-around align-items-center gap-4 ">
+                <h1 class="text-center text-lg-start">Simplify how your team works today.</h1>
+                <button class="btn rounded-pill border-0">Get Started</button>
             </div>
-            <div class="review review4">
-                <img src="images/avatar-shanai.png " alt="shanai" />
-                <h5 class="text-center my-3">Shanai Gough</h5>
-                <p class="text-center px-3">
-                    “Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being intrusive.”
-                </p>
-            </div>
-        </div>
-        <div class="dots">
-            <span class="dot rounded-pill" onclick="currentCard(1)"></span>
-            <span class="dot rounded-pill" onclick="currentCard(2)"></span>
-            <span class="dot rounded-pill" onclick="currentCard(3)"></span>
-            <span class="dot rounded-pill" onclick="currentCard(4)"></span>
-        </div>
-        <button class="btn rounded-pill border-0 mx-auto mt-4">Get Started</button>
-    </section>
-    <section class="subscribe-wrapper mt-5">
-        <div class="subscribe-content d-flex flex-column flex-lg-row justify-content-around align-items-center gap-4 ">
-            <h1 class="text-center text-lg-start">Simplify how your team works today.</h1>
-            <button class="btn rounded-pill border-0">Get Started</button>
-        </div>
-    </section>
-    <footer class="d-flex flex-column flex-lg-row justify-content-between">
-        <form class="d-flex flex-column justify-content-start align-items-lg-start gap-2 order-lg-3 align-items-lg-start" id="email-form">
-            <div>
-                <input id="email" type="email" placeholder="Updates in your inbox..." class="border-0" />
-                <button class="rounded-pill border-0" type="submit">
+        </section>
+        <footer class="d-flex flex-column flex-lg-row justify-content-between">
+            <form class="d-flex flex-column justify-content-start align-items-lg-start gap-2 order-lg-3 align-items-lg-start" id="email-form">
+                <div>
+                    <input id="email" type="email" placeholder="Updates in your inbox..." class="border-0" />
+                    <button class="rounded-pill border-0" type="submit">
                 Go
             </button>
+                </div>
+                <small class="ms-3"></small>
+            </form>
+            <div class="list1 d-flex flex-row justify-content-around justify-content-lg-between  align-items-start mt-5 order-lg-2 align-items-lg-centre mt-lg-0">
+                <ul class="list-group">
+                    <li class="mb-2"><a href="" class="text-decoration-none">Home</a></li>
+                    <li class="mb-2"><a href="" class="text-decoration-none">Pricing</a></li>
+                    <li class="mb-2"><a href="" class="text-decoration-none">Products</a></li>
+                    <li class="mb-2"><a href="" class="text-decoration-none">About Us</a></li>
+                </ul>
+                <ul class="list-group">
+                    <li class="mb-2"><a href="" class="text-decoration-none">Careers</a></li>
+                    <li class="mb-2"><a href="" class="text-decoration-none">Community</a></li>
+                    <li class="mb-2"><a href="" class="text-decoration-none">Privacy Policy</a></li>
+                </ul>
             </div>
-            <small class="ms-3"></small>
-        </form>
-        <div class="list1 d-flex flex-row justify-content-around justify-content-lg-between  align-items-start mt-5 order-lg-2 align-items-lg-centre mt-lg-0">
-            <ul class="list-group">
-                <li class="mb-2"><a href="" class="text-decoration-none">Home</a></li>
-                <li class="mb-2"><a href="" class="text-decoration-none">Pricing</a></li>
-                <li class="mb-2"><a href="" class="text-decoration-none">Products</a></li>
-                <li class="mb-2"><a href="" class="text-decoration-none">About Us</a></li>
-            </ul>
-            <ul class="list-group">
-                <li class="mb-2"><a href="" class="text-decoration-none">Careers</a></li>
-                <li class="mb-2"><a href="" class="text-decoration-none">Community</a></li>
-                <li class="mb-2"><a href="" class="text-decoration-none">Privacy Policy</a></li>
-            </ul>
-        </div>
-        <div class="list2 d-flex flex-column justify-content-center align-items-center gap-5 my-5 my-lg-0 order-lg-1 flex-lg-column-reverse">
-            <div class="icons">
-                <a href=""><i class="fab fa-facebook-square"></i></a>
-                <a href="" class="ms-4 ms-lg-2"><i class="fab fa-youtube"></i></a>
-                <a href="" class="ms-4 ms-lg-2"><i class="fab fa-twitter"></i></a>
-                <a href="" class="ms-4 ms-lg-2"><i class="fab fa-pinterest"></i></a>
-                <a href="" class="ms-4 ms-lg-2"><i class="fab fa-instagram"></i></a>
+            <div class="list2 d-flex flex-column justify-content-center align-items-center gap-5 my-5 my-lg-0 order-lg-1 flex-lg-column-reverse">
+                <div class="icons">
+                    <a href=""><i class="fab fa-facebook-square"></i></a>
+                    <a href="" class="ms-4 ms-lg-2" aria-label="Youtuber"><i class="fab fa-youtube"></i></a>
+                    <a href="" class="ms-4 ms-lg-2" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="" class="ms-4 ms-lg-2" aria-label="Pinterest"><i class="fab fa-pinterest"></i></a>
+                    <a href="" class="ms-4 ms-lg-2" aria-label="Instafram"><i class="fab fa-instagram"></i></a>
+                </div>
+                <img class="footer-logo" src="images/logo2.svg" alt="logo">
             </div>
-            <img class="footer-logo" src="images/logo2.svg" alt="logo">
-        </div>
-        <p class="text-center">Copyright 2020. All Rights Reserved</p>
-    </footer>
+            <p class="text-center">Copyright 2020. All Rights Reserved</p>
+        </footer>
 
-    <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/66b58c16d1.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+        <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/66b58c16d1.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 </body>
 
 </html>
